# twfe

./: .gitignore  README.md  pyproject.toml  todo.txt
notebooks/: checking.ipynb
src/twfeiw/: __init__.py  api.py  data.py  design.py  ols.py  results.py  vcov.py
tests/: test_api.py  test_data.py  test_design.py  test_event_study.py  test_import.py  test_ols.py  test_results.py  test_sun_abraham.py  test_vcov.py
